// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component renders a video with custom ratio (4:3) 1`] = `
<div>
  <div
    class="c-PJLV c-PJLV-iiwtye-css"
  >
    <div
      class="c-PJLV c-PJLV-ijsPNpl-css"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`Video component renders a video with default ratio 1`] = `
<div>
  <div
    class="c-PJLV c-PJLV-ijNtcEK-css"
  >
    <div
      class="c-PJLV c-PJLV-ijsPNpl-css"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;
